[tool.poetry]
name = "sber-ios-install"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pymobiledevice3 = "^1.19.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
